--- a/templates/krang.css.tmpl
+++ b/templates/krang.css.tmpl
@@ -218,6 +218,8 @@ input.non-hilite:focus, select.non-hilite:focus, textarea.non-hilite:focus { bac
 #C .full input, #C .full select, #C .full textarea { width:   95%; }
 #C .demi input, #C .demi select, #C .demi textarea { width: 71.3%; }
 #C .half input, #C .half select, #C .half textarea { width: 47.5%; }
+#C .quarter input, #C .quarter select, #C .quarter textarea { width: 23.75%; }
+#C .eighth input, #C .eighth select, #C .eighth textarea { width: 12%; }
 #C .full .usual, #C .demi .usual, #C .half .usual  { width:  auto; }
 #C .half input.pushright     { margin-left: 30px;         }
 #C .half input.disabled      { background-color: #e0e0e0; } /* Neccesary for IE to gray disabled input */
