Only show CDN stuff on site if its enabled

--- a/templates/Site/edit.base.tmpl
+++ b/templates/Site/edit.base.tmpl
@@ -86,10 +86,12 @@ save_stay = function()
 <td><input name="preview_path" value="<tmpl_var escape=html preview_path>"></td>
 </tr>
 
+<tmpl_if enable_cdn_support>
 <tr<tmpl_if error_invalid_cdn_url> class="err"</tmpl_if>>
 <th><tmpl_lang CDN URL></th>
 <td><input name="cdn_url" value="<tmpl_var escape=html cdn_url>"></td>
 </tr>
+</tmpl_if>
 
 
 </tbody>
