--- a/templates/krang.css.tmpl
+++ b/templates/krang.css.tmpl
@@ -251,6 +251,14 @@ input.non-hilite:focus, select.non-hilite:focus, textarea.non-hilite:focus { bac
 #C .lame input.west { float: none; }
 #C .capped { margin-top: 10px; border-top: 5px solid <tmpl_var XLightColor>; }/*:temp(db2)*/
 
+/*****************
+ * Alert Buttons - buttons that are more drastic and unreversible like delete
+ *****************/
+.button.alert  { background: #EE0000 none 0 50% repeat-x !important; color: #FFF !important; width: auto !important; overflow: visible; margin: 0 5px 0 0; border: 1px solid #BBB; border-color: #EEE #BBB #BBB #EEE; padding: .1em .5em; font-size: 1em; line-height: 1; }
+.button.alert:hover { background-color: #CC0000 !important; background-image: none !important; }
+#C .panel input.alert { background: #EE0000 none 0 50% repeat-x; color: #fff; width: auto; overflow: visible; margin: 0 0 0 5px; border: 1px solid #777; border-color: #ccc #777 #777 #ccc; padding: .1em .5em; font-size: 1.27em; line-height: 1; font-weight: normal }
+#C .panel input.alert:hover { background-color: #CC0000 !important; background-image: none !important; }.
+
 /*******************
  * Dropdown Buttons *
  ********************/
