--- a/templates/Group/edit_view.base.tmpl
+++ b/templates/Group/edit_view.base.tmpl
@@ -264,7 +264,7 @@ cancel_group_change = function()
 <td class="tick f"><tmpl_var admin_lists></td>
 <td><tmpl_lang Manage Lists></td>
 <td class="tick"><tmpl_var may_skip_related_assets></td>
-<td class="l"><tmpl_lang May skip Related Assets During Publish></td>
+<td class="l"><tmpl_lang May Skip Related Assets During Publish></td>
 </tr>
 
 <tr>
